Add adcc paper doi

--- a/docs/pub.bib
+++ b/docs/pub.bib
@@ -1,7 +1,8 @@
-@unpublished{adcc,
+@article{adcc,
   title = {{adcc: A versatile toolkit for rapid development of algebraic-diagrammatic construction methods}},
   author = {Herbst, Michael F. and Scheurer, Maximilian and Fransson, Thomas and Rehn, Dirk R. and Dreuw, Andreas},
-  url = {https://hal.archives-ouvertes.fr/hal-02319517},
-  note = {Submitted.},
-  year = {2019},
+  journal = {WIREs Computational Molecular Science},
+  note = {Accepted.},
+  doi = {10.1002/wcms.1462},
+  year = {2020},
 }
