Add some preprints

--- a/docs/pub.bib
+++ b/docs/pub.bib
@@ -2,7 +2,24 @@
   title = {{adcc: A versatile toolkit for rapid development of algebraic-diagrammatic construction methods}},
   author = {Herbst, Michael F. and Scheurer, Maximilian and Fransson, Thomas and Rehn, Dirk R. and Dreuw, Andreas},
   journal = {WIREs Computational Molecular Science},
-  note = {Accepted.},
   doi = {10.1002/wcms.1462},
   year = {2020},
+}
+@misc{cvsrelaxation,
+  author = {Michael Herbst and Thomas Fransson},
+  title = {{Quantifying the error of the core-valence separation approximation}},
+  year = {2020},
+  url = {https://arxiv.org/abs/2005.05848},
+}
+@misc{complex_excited_polarisabilities,
+  author = {Maximilian Scheurer and Thomas Fransson and Patrick Norman and Andreas Dreuw and Dirk R. Rehn},
+  title = {{Complex Excited State Polarizabilities in the ADC/ISR Framework}},
+  year = {2020},
+  doi = {10.26434/chemrxiv.12179289.v1},
+}
+@misc{psi4_14,
+  author = {Daniel Smith and Lori Burns and Andrew Simmonett and Robert Parrish and Matthew Schieber and others},
+  title = {{Psi4 1.4: Open-Source Software for High-Throughput Quantum Chemistry}},
+  year = {2020},
+  doi = {10.26434/chemrxiv.11930031.v1}
 }
