--- a/docs/pub.bib
+++ b/docs/pub.bib
@@ -5,11 +5,15 @@
   doi = {10.1002/wcms.1462},
   year = {2020},
 }
-@misc{cvsrelaxation,
-  author = {Michael Herbst and Thomas Fransson},
-  title = {{Quantifying the error of the core-valence separation approximation}},
+@article{psi4_14,
+  author = {Smith, Daniel G. A. and Burns, Lori A. and Simmonett, Andrew C. and Parrish, Robert M. and Schieber, Matthew C. and others},
+  doi = {10.1063/5.0006002},
+  issue = {18},
+  journal = {J. Chem. Phys.},
+  pages = {184108},
+  title = {Psi4 1.4: Open-source software for high-throughput quantum chemistry},
+  volume = {152},
   year = {2020},
-  url = {https://arxiv.org/abs/2005.05848},
 }
 @misc{complex_excited_polarisabilities,
   author = {Maximilian Scheurer and Thomas Fransson and Patrick Norman and Andreas Dreuw and Dirk R. Rehn},
@@ -17,9 +21,9 @@
   year = {2020},
   doi = {10.26434/chemrxiv.12179289.v1},
 }
-@misc{psi4_14,
-  author = {Daniel Smith and Lori Burns and Andrew Simmonett and Robert Parrish and Matthew Schieber and others},
-  title = {{Psi4 1.4: Open-Source Software for High-Throughput Quantum Chemistry}},
+@misc{cvsrelaxation,
+  author = {Michael Herbst and Thomas Fransson},
+  title = {{Quantifying the error of the core-valence separation approximation}},
   year = {2020},
-  doi = {10.26434/chemrxiv.11930031.v1}
+  url = {https://arxiv.org/abs/2005.05848},
 }
