Set threads for binder

--- a/examples/0_basics/00_Overview.ipynb
+++ b/examples/0_basics/00_Overview.ipynb
@@ -39,6 +39,11 @@
     "import psi4\n",
     "import adcc\n",
     "\n",
+    "# By default adcc uses all cores on the machnine.\n",
+    "# For the binder we need to reduce this a little\n",
+    "# adcc to use two threads\n",
+    "adcc.set_n_threads(2)\n",
+    "\n",
     "# Run SCF in Psi4 using a cc-pVTZ basis\n",
     "mol = psi4.geometry(\"\"\"\n",
     "    O 0 0 0\n",
