--- a/examples/0_basics/00_Overview.ipynb
+++ b/examples/0_basics/00_Overview.ipynb
@@ -39,9 +39,8 @@
     "import psi4\n",
     "import adcc\n",
     "\n",
-    "# By default adcc uses all cores on the machnine.\n",
-    "# For the binder we need to reduce this a little\n",
-    "# adcc to use two threads\n",
+    "# By default adcc uses all cores on the machnine. For the binder VMs we need\n",
+    "# to reduce this a little and tell adcc to use two threads\n",
     "adcc.set_n_threads(2)\n",
     "\n",
     "# Run SCF in Psi4 using a cc-pVTZ basis\n",
