--- a/examples/0_basics/00_Overview.ipynb
+++ b/examples/0_basics/00_Overview.ipynb
@@ -7,11 +7,11 @@
     "# Overview of adcc\n",
     "\n",
     "ADC-connect – or adcc in short – is a Python-based framework to connect to arbitrary programs and perform calculations based on the algebraic-diagrammatic construction approach (ADC) on top of their existing self-consistent field (SCF) procedures. Four SCF codes can be used with adcc out of the box, namely [molsturm](https://molsturm.org),\n",
-    "[psi4](https://psicode.org/), [PySCF](https://github.com/pyscf/pyscf), and [veloxchem](https://veloxchem.org/). Without expressing any particular preference these notebooks will focus on psi4 and pyscf to obtain an SCF reference, but the other codes work very similar.\n",
+    "[psi4](https://psicode.org/), [PySCF](https://github.com/pyscf/pyscf), and [veloxchem](https://veloxchem.org/), see [01_Backends.ipynb](01_Backends.ipynb). Without expressing any particular preference these notebooks will focus on psi4 and pyscf to obtain an SCF reference, but the other codes work very similar.\n",
     "\n",
-    "The purpose of these tutorial notebooks is to introduce adcc from the practitioners perspective and give an idea of supported features. For a more structured documentation and an API reference, see https://adc-connect.org. In particular for installation instructions see https://adc-connect.org/installation.html. If you cannot be bothered to install adcc just to try these notebooks, just go to https://try.adc-connect.org.\n",
+    "This notebook and the others in the [0_basics](https://github.com/adc-connect/adcc/tree/doc/examples/0_basics) folder will introduce adcc from the practitioners perspective and give an idea of supported features. For a more structured documentation and an API reference, see https://adc-connect.org. In particular for installation instructions see https://adc-connect.org/installation.html. If you cannot be bothered to install adcc just to try these notebooks, just go to https://try.adc-connect.org, which will allow you to play with the notebooks from `0_basics` in your browser.\n",
     "\n",
-    "These notebooks do not put a strong emphasis on the theory and numerical methods behind adcc, with the exception of a small introduction in [02_Theory.ipynb](02_Theory.ipynb). If have the desire to dig deeper, a review of ADC literature is provided in https://adc-connect.org/theory.html."
+    "In contrast these notebooks will not put a strong emphasis on the theory and numerical methods behind adcc, save a small  introduction in [02_Theory.ipynb](02_Theory.ipynb). If you have the desire to dig deeper, a review of ADC literature is provided in https://adc-connect.org/theory.html."
    ]
   },
   {
@@ -25,9 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Running a simple ADC calculation on top of an HF reference obtained with one of the four packages mentioned above takes pretty much a single line of code as we will see now.\n",
-    "\n",
-    "Let's say we want to calculate an excitation spectrum of water in the UV/vis range. First we prepare our reference in psi4 in a cc-pVTZ basis:"
+    "Running a simple ADC calculation on top of an HF reference takes pretty much a single line of code. Let's see this in action for computing the excitation spectrum of water in the UV/vis range. First we prepare our reference in psi4 in a cc-pVTZ basis:"
    ]
   },
   {
@@ -40,7 +38,7 @@
     "import adcc\n",
     "\n",
     "# By default adcc uses all cores on the machnine. For the binder VMs we need\n",
-    "# to reduce this a little and tell adcc to use two threads\n",
+    "# to reduce this a little and tell adcc to use two threads (see 03_Tweaks.ipynb)\n",
     "adcc.set_n_threads(2)\n",
     "\n",
     "# Run SCF in Psi4 using a cc-pVTZ basis\n",
@@ -92,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get a nice table, summarising excitation energies, oscillator strengths as well as  `|v1|^2` and `|v2|^2`, the norms of the singles and doubles blocks of the ADC vectors (to be explained in more detail in [02_Theory.ipynb](02_Theory.ipynb)).\n",
+    "The result is again a table, summarising excitation energies, oscillator strengths as well as  `|v1|^2` and `|v2|^2`, the norms of the singles and doubles blocks of the ADC vectors (to be explained in more detail in [02_Theory.ipynb](02_Theory.ipynb)).\n",
     "\n",
     "Note: If you are running adcc from a script, than just `print(state)` will not give you the same answer, instead you will have to explicitly call the `state.describe()` function, like so:"
    ]
@@ -126,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plotted spectrum shows both the exact excitation energies with dashed lines as well as a Lorenzian envelope in solid. Notice that plot spectrum is pretty flexible and takes for example typical arguments you can pass to a `plt.plot` function call from matplotlib, for example:"
+    "The plotted spectrum shows both the exact excitation energies with dashed lines as well as a Lorenzian envelope in solid. Notice that plot spectrum is pretty flexible and takes typical arguments you can pass to a `plt.plot` function call from matplotlib (which it uses under the hood), for example:"
    ]
   },
   {
@@ -193,11 +191,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
     "n_singlets = 10\n",
     "state_1 = adcc.adc1(wfn, n_singlets=n_singlets, conv_tol=1e-3)           # ADC(1)\n",
     "print()\n",
-    "state_2x = adcc.adc2x(state.ground_state, n_singlets=n_singlets,         # ADC(2)-x, as guesses\n",
-    "                      guesses=state.excitation_vectors, conv_tol=1e-3)   # use ADC(2) result\n",
+    "state_2x = adcc.adc2x(state.ground_state, n_singlets=n_singlets,         # ADC(2)-x\n",
+    "                      guesses=state.excitation_vectors, conv_tol=1e-3)   # use ADC(2) result as guesses\n",
     "print()\n",
     "state_3 = adcc.adc3(state_2x.ground_state, n_singlets=n_singlets,\n",
     "                    guesses=state_2x.excitation_vectors, conv_tol=1e-3)  # ADC(3)\n",
@@ -208,6 +208,13 @@
     "state_2x.plot_spectrum(label=\"ADC(2)-x\")\n",
     "state_3.plot_spectrum(label=\"ADC(3)\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One clearly notices the increase in computational time between the methods of the ADC hierarchy. Between ADC(2) and ADC(2)-x the changes are usually most drastic due to an increase in computational scaling (from $O(N^5)$ to $O(N^6)$)."
    ]
   },
   {
@@ -256,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3rc1"
   }
  },
  "nbformat": 4,
