--- a/docs/pub.bib
+++ b/docs/pub.bib
@@ -15,11 +15,15 @@
   volume = {152},
   year = {2020},
 }
-@misc{complex_excited_polarisabilities,
-  author = {Maximilian Scheurer and Thomas Fransson and Patrick Norman and Andreas Dreuw and Dirk R. Rehn},
-  title = {{Complex Excited State Polarizabilities in the ADC/ISR Framework}},
+@article{complex_excited_polarisabilities,
+  author = {Scheurer, Maximilian and Fransson, Thomas and Norman,Patrick and Dreuw, Andreas and Rehn, Dirk R. },
+  title = {Complex excited state polarizabilities in the ADC/ISR framework},
+  journal = {J. Chem. Phys.},
+  volume = {153},
+  number = {7},
+  pages = {074112},
   year = {2020},
-  doi = {10.26434/chemrxiv.12179289.v1},
+  doi = {10.1063/5.0012120},
 }
 @misc{cvsrelaxation,
   author = {Michael Herbst and Thomas Fransson},
