--- a/docs/pub.bib
+++ b/docs/pub.bib
@@ -25,9 +25,13 @@
   year = {2020},
   doi = {10.1063/5.0012120},
 }
-@misc{cvsrelaxation,
-  author = {Michael Herbst and Thomas Fransson},
+@article{cvsrelaxation,
+  author = {Michael F. Herbst and Thomas Fransson},
   title = {{Quantifying the error of the core-valence separation approximation}},
+  journal = {J. Chem. Phys.},
+  volume = {153},
+  number = {5},
+  pages = {054114},
   year = {2020},
-  url = {https://arxiv.org/abs/2005.05848},
+  doi = {10.1063/5.0013538},
 }
