some docs and cleanup
more docs and cleanup

cleanup

--- a/docs/ref.bib
+++ b/docs/ref.bib
@@ -297,3 +297,58 @@
   pages   = {774-784},
   doi     = {10.1080/00268976.2013.859313},
 }
+
+@article{Scheurer2018,
+author = {Scheurer, Maximilian and Herbst, Michael F. and Reinholdt, Peter and Olsen, J{\'{o}}gvan Magnus Haugaard and Dreuw, Andreas and Kongsted, Jacob},
+doi = {10.1021/acs.jctc.8b00576},
+issn = {1549-9618},
+journal = {J. Chem. Theory Comput.},
+number = {9},
+pages = {4870−4883},
+pmid = {30086234},
+title = {{Polarizable Embedding Combined with the Algebraic Diagrammatic Construction: Tackling Excited States in Biomolecular Systems}},
+volume = {14},
+year = {2018}
+}
+
+@article{Lunkenheimer2013,
+author = {Lunkenheimer, Bernd and K{\"{o}}hn, Andreas},
+doi = {10.1021/ct300763v},
+issn = {15499626},
+journal = {J. Chem. Theory Comput.},
+title = {{Solvent effects on electronically excited states using the conductor-like screening model and the second-order correlated method ADC(2)}},
+year = {2013}
+}
+
+@article{Marefat2018,
+author = {{Marefat Khah}, Alireza and {Karbalaei Khani}, Sarah and H{\"{a}}ttig, Christof},
+doi = {10.1021/acs.jctc.8b00396},
+issn = {15499626},
+journal = {J. Chem. Theory Comput.},
+pmid = {30040882},
+title = {{Analytic Excited State Gradients for the QM/MM Polarizable Embedded Second-Order Algebraic Diagrammatic Construction for the Polarization Propagator PE-ADC(2)}},
+year = {2018}
+}
+
+@article{Scheurer2019,
+  title={CPPE: An open-source C++ and Python library for polarizable embedding},
+  author={Scheurer, Maximilian and Reinholdt, Peter and Kjellgren, Erik Rosendahl and Olsen, Jógvan Magnus Haugaard and Dreuw, Andreas and Kongsted, Jacob},
+  journal={J. Chem. Theory Comput.},
+  volume={15},
+  number={11},
+  pages={6154--6163},
+  year={2019},
+  doi={10.1021/acs.jctc.9b00758},
+}
+
+@ARTICLE{Steinmann2019,
+  title     = {Response properties of embedded molecules through the polarizable embedding model},
+  author    = {Steinmann, Casper and Reinholdt, Peter and N{\o}rby, Morten
+               Steen and Kongsted, Jacob and Olsen, J{\'o}gvan Magnus Haugaard},
+  journal   = {Int. J. Quantum Chem.},
+  volume    =  {119},
+  number    =  {1},
+  pages     = {e25717},
+  year      =  {2019},
+  doi       =  {10.1002/qua.25717},
+}
